/*
Copyright 2021 Loggie Authors

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package grpc;

option go_package = "./;grpc";

service LogService {
    rpc logStream (stream LogMsg) returns (LogResp) {
    }
}

message LogMsg {
    bytes rawLog = 1;
    // deprecated
    map<string, bytes> header = 2;
    // structured log data
    map<string, bytes> logBody = 3;
    bool isSplit = 4;
    bytes packedHeader = 5;
}

message LogResp {
    bool success = 1;
    int32 count = 2;
    string errorMsg = 3;
}
